Revision history for Crypt-Passphrase-HSM

0.002     2023-04-20 01:12:29+0200
          - Add Crypt::Passphrase::HSM
          - Rename dist to Crypt-Passphrase-HSM

0.001     2023-04-07 14:40:14+0200
          - Initial release to an unsuspecting world
